# django-risingwave

./: LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
src/django_risingwave/: base.py  client.py  creation.py  features.py  introspection.py  operations.py  psycopg_any.py  schema.py
