[project]
name = "django-risingwave"
version = "0.0.3"
description = "A Django ORM connector for RisingWave"
authors = [
    {name = "Bas Steins", email = "blog@bascodes.com"},
]
maintainers = [
  { name = "Bas Steins", email = "blog@bascodes.com" },
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.urls]
"Homepage" = "https://bas.surf/django-risingwave"
"Source" = "https://github.com/bas-codes/django-risingwave"
"Bug Tracker" = "https://github.com/bas-codes/django-risingwave/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
